<resources>
    <string name="app_name">KotlinPokedex</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_content_description">Image of Pokemon</string>
    <string name="placeholder_pokemon_name">Pikachu</string>
    <string name="pokemon_id">#%3$d</string>
    <string name="pokemon_height">Height</string>
    <string name="pokemon_weight">Weight</string>
    <string name="pokemon_type_title">Type</string>
    <string name="pokemon_weakness_title">Weaknesses</string>
    <string name="pokemon_prev_evol_title">Previous Evolutions</string>
    <string name="pokemon_next_evol_title">Future Evolutions</string>
    <string name="previous_evolution">Previous Evolution</string>
    <string name="next_evolution">Next Evolution</string>
</resources>
