<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:clickable="true"
    tools:context=".PokemonDetail">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pokemon_name_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="16dp"
                    android:text="@string/placeholder_pokemon_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/title_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pokemon_id_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingEnd="16dp"
                    android:text="@string/pokemon_id"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_above="@id/card_view_details"
            android:layout_alignParentEnd="true"
            android:background="@drawable/pokeball_background"
            android:backgroundTint="@color/transparent_background"
            android:translationX="25dp"
            android:translationY="25dp" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_above="@id/card_view_details"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="33dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/dots"
            android:backgroundTint="@color/transparent_background" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="32dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:padding="32dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pokemon_height"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/pokemon_height_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:mcv_chipText="0.61m" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pokemon_weight"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/pokemon_weight_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:mcv_chipText="8.5kg" />

                <TextView
                    android:id="@+id/pokemon_type_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pokemon_type_title"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/type_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <TextView
                    android:id="@+id/pokemon_weakness_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pokemon_weakness_title"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/weakness_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="8dp"
                    android:background="#c0c0c0" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/left_evolution_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Previous Evolution"
                            android:textSize="@dimen/text_size"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/prev_evol_image"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/prev_evol_recycler_view"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/right_evolution_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Next Evolution"
                            android:textSize="@dimen/text_size"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/next_evol_image"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/next_evol_recycler_view"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal" />

                    </LinearLayout>


                </LinearLayout>

                <!--                <androidx.recyclerview.widget.RecyclerView-->
                <!--                    android:id="@+id/prev_evol_recycler_view"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="40dp" />-->

                <!--                <androidx.recyclerview.widget.RecyclerView-->
                <!--                    android:id="@+id/next_evol_recycler_view"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="40dp" />-->

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/pokemon_image_details"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_above="@id/card_view_details"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:src="@drawable/sample_image"
            android:translationY="50dp" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:clickable="false" />

</RelativeLayout>